syntax = "proto3";

package users_service.v1;

service UsersService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
  string userName = 1;
  string email = 2;
  string DPURL = 3;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
}

message Profile {
  string  bio = 1;
  Gender gender = 2;
  repeated string links = 3;
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
  string userName = 3;
  string email = 4;
  bool isPrivate = 5;
  string createdAt = 6;
  string DPURL = 7;
  Profile profile = 8;

}
